--- a/index.html
+++ b/index.html
@@ -82,11 +82,11 @@
     }
     .side-left {
       left: 0;
-      background-image: url('raposa 2.png');
+      background-image: url();
     }
     .side-right {
       right: 0;
-      background-image: url('ulli 4.png');
+      background-image: url();
     }
     .divider {
       width: 60%;
