--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="character">
         <img src="raposa 2.png" alt="Raposa Sonhadora">
         <h3>A Raposa</h3>
-        <p>Ama sua ullva, e não viveria sem o gosto de de seu fruto </p>
+        <p>Ama sua ullva, e não viveria sem o gosto de seu fruto </p>
       </div>
       <div class="character">
         <img src="ulli 4.jpg" alt="Cacho de Uvas Romântico">
@@ -125,11 +125,11 @@
   <div class="divider"></div>
 
   <section>
-    <h2>Galeria de Sentimentos</h2>
+    <h2>Noise</h2>
     <div class="gallery">
-      <img src="https://i.pinimg.com/originals/38/4e/d4/384ed46875f720ad43766f68dfc19e61.jpg" alt="Raposa e Uvas aquarela">
-      <img src="https://i.pinimg.com/originals/4f/13/2d/4f132d74065bacc3fae47e7aa1bcfd45.jpg" alt="Raposa pulando">
-      <img src="https://i.pinimg.com/originals/5d/f4/02/5df402b17e4dc3bb6e75b6e3401f0919.jpg" alt="Vinhedo ilustrado">
+      <img src="eu i ulli.png" alt="noise">
+      <img src="eui i ulli 2.png" alt="Raposa pulando">
+      <img src="eu i ulli 3.png" alt="Vinhedo ilustrado">
       <img src="https://i.pinimg.com/originals/39/ff/70/39ff70e9c82e7cf1b61d7c17269c7bfc.jpg" alt="Cena suave">
       <img src="ulli 2.jpg" alt="Foto da galeria pessoal">
     </div>
