--- a/index.html
+++ b/index.html
@@ -95,16 +95,29 @@
       background: #d9a6a6;
       border-radius: 5px;
     }
+
+    /* Botões de música */
     .music-icon {
       position: fixed;
       bottom: 20px;
       left: 50%;
-      transform: translateX(-50%);
+      transform: translateX(-60px);
       width: 50px;
       height: 50px;
       cursor: pointer;
       z-index: 10;
     }
+
+    .next-icon {
+      position: fixed;
+      bottom: 20px;
+      left: calc(50% + 10px);
+      width: 50px;
+      height: 50px;
+      cursor: pointer;
+      z-index: 10;
+    }
+
     #bg-music {
       display: none;
     }
@@ -114,41 +127,64 @@
   <div class="side-decor side-left"></div>
   <div class="side-decor side-right"></div>
 
-  <!-- Ícone personalizado para controle da música -->
-  <img src="uva.png" alt="Play Music" class="music-icon" onclick="document.getElementById('bg-music').play()">
+<!-- Botões de controle de música -->
+<img src="uva.png" alt="Play/Pause" class="music-icon" onclick="togglePlayPause()">
+<img src="raposa.jpg" alt="Próxima Música" class="next-icon" onclick="tocarProxima()">
 
-  <audio id="bg-music" autoplay>
-    <source src="pela luz dos olhos teus.mp3" type="audio/mpeg">
-    <source src="terceira musica.mp3" type="audio/mpeg">
-    <source src="segunda musica.mp3" type="audio/mpeg">
-  </audio>
+<audio id="bg-music">
+  <source src="pela luz dos olhos teus.mp3" type="audio/mpeg">
+  Seu navegador não suporta o áudio.
+</audio>
 
-  <script>
-    const musicas = [
-      "pela luz dos olhos teus.mp3",
-      "terceira musica.mp3",
-      "segunda musica.mp3"
-    ];
+<script>
+  const musicas = [
+    "pela luz dos olhos teus.mp3",
+    "segunda musica.mp3",
+    "terceira musica.mp3"
+  ];
 
-    let atual = 0;
-    const player = document.getElementById("bg-music");
+  let atual = 0;
+  let tocando = false;
 
-    function tocarProxima() {
-      atual = (atual + 1) % musicas.length;
-      player.src = musicas[atual];
+  const player = document.getElementById("bg-music");
+
+  function tocarAtual() {
+    player.src = musicas[atual];
+    player.load();
+    player.play();
+    tocando = true;
+  }
+
+  function togglePlayPause() {
+    if (player.paused) {
+      player.play();
+      tocando = true;
+    } else {
+      player.pause();
+      tocando = false;
+    }
+  }
+
+  function tocarProxima() {
+    atual = (atual + 1) % musicas.length;
+    player.pause();
+    player.src = musicas[atual];
+    player.load();
+    if (tocando) {
       player.play();
     }
+  }
 
-    window.addEventListener('DOMContentLoaded', () => {
-      player.src = musicas[atual];
-      player.volume = 0.2;
-    });
+  window.addEventListener('DOMContentLoaded', () => {
+    player.src = musicas[atual];
+    player.volume = 0.2;
+  });
 
-    player.addEventListener("ended", tocarProxima);
-  </script>
+  player.addEventListener("ended", tocarProxima);
+</script>
 
   <header>
-    <h1>A Raposa e a  Ullva</h1>
+    <h1>A Raposa e a Ullva</h1>
     <p>Um romance suave entre folhas, sombras e desejos doces.</p>
   </header>
 
@@ -158,12 +194,12 @@
       <div class="character">
         <img src="raposa 2.png" alt="Raposa Sonhadora">
         <h3>A Raposa</h3>
-        <p>Ama sua ullva, e não viveria sem o gosto de seu fruto </p>
+        <p>Ama sua ullva, e não viveria sem o gosto de seu fruto</p>
       </div>
       <div class="character">
         <img src="ulli 4.jpg" alt="Cacho de Uvas Romântico">
         <h3>A Uva</h3>
-        <p>Amorosa, linda, e uma ullvinha q depende da proteção de sua Rapoasa </p>
+        <p>Amorosa, linda, e uma ullvinha que depende da proteção de sua Rapoasa</p>
       </div>
     </div>
   </section>
@@ -183,7 +219,7 @@
 
   <section>
     <h2>Por que eu te amo hein</h2>
-    <p>Com certeza é por conta de: seus olhos, seu sorriso, seu rostinho, seu corpinho, seu cabelinho, sua mãozinha, seu pezinho, seu cheiro, sua pele, seu cuidado, sua preocupação, seu ciúmes muito controlado, seu amor por mim, seu amor por minha família, seu interesse em estar comigo, sua saudade, seus beijinhos, suas declarações, seus "eu te amo", seus "boa noite", suas risadas, seus aúdios, sua voz,suas cartas, seus presentes, seu modo de andar, seu modo de olhar pra mim, tudo, tudo me faz te amar.</p>
+    <p>Com certeza é por conta de: seus olhos, seu sorriso, seu rostinho, seu corpinho, seu cabelinho, sua mãozinha, seu pezinho, seu cheiro, sua pele, seu cuidado, sua preocupação, seu ciúmes muito controlado, seu amor por mim, seu amor por minha família, seu interesse em estar comigo, sua saudade, seus beijinhos, suas declarações, seus "eu te amo", seus "boa noite", suas risadas, seus aúdios, sua voz, suas cartas, seus presentes, seu modo de andar, seu modo de olhar pra mim, tudo, tudo me faz te amar.</p>
   </section>
 
   <div class="quote">
@@ -192,7 +228,7 @@
 
   <section>
     <h2>Até o infinito e além</h2>
-    <p>Vou te amar hoje, te amar amanhã, te amar quando nos casarmos, te amar quando tivermos o nosso primeiro filho, te amar quando tivermos nossa primeira discurssão, te amar quando tivermos nossa primeira viagem, te amar quando tivermos nossa primeira reunião na escola de nosso filho, te amar quando tivermos no nosso primeiro aniversário de casados, te amar na primeira vez que o nosso filho andar, te amar na primeira vez que formos a igreja como família, te amar na primeira vez que ouvirmos o nosso filho cantar seu primeiro mpb, te amar quando ja tivermos 50 anos e felizes vivendo como se fosse a primeira vez, te amar quando nosso filho passar na faculdade, te amar quando nosso filho nos der um netinho, te amar quando formos na nossa primeira viagem com a nossa família, te amar quando ja tivermos bem velhinhos e cantar as músicas que me lembram você, e te amar até o infinito e além.</p>
+    <p>Vou te amar hoje, te amar amanhã, te amar quando nos casarmos, te amar quando tivermos o nosso primeiro filho, te amar quando tivermos nossa primeira discurssão, te amar quando tivermos nossa primeira viagem, te amar quando tivermos nossa primeira reunião na escola de nosso filho, te amar quando tivermos no nosso primeiro aniversário de casados, te amar na primeira vez que o nosso filho andar, te amar na primeira vez que formos a igreja como família, te amar na primeira vez que ouvirmos o nosso filho cantar seu primeiro MPB, te amar quando já tivermos 50 anos e felizes vivendo como se fosse a primeira vez, te amar quando nosso filho passar na faculdade, te amar quando nosso filho nos der um netinho, te amar quando formos na nossa primeira viagem com a nossa família, te amar quando já tivermos bem velhinhos e cantar as músicas que me lembram você, e te amar até o infinito e além.</p>
     <img src="ulli.jpg" alt="Raposa e Uvas ao entardecer" style="width:100%; border-radius:12px; margin-top:20px;">
   </section>
 
